// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleCategory  Library closed, category collapsed  Renders with category icon, but without list of Module components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategory
    collapsed={true}
    isReadOnly={false}
    libraryOpen={false}
    modules={
      Array [
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="add"
          id={88}
          name="First Module"
      />,
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="url"
          id={101}
          name="Second Module"
      />,
      ]
    }
    name="Add data"
    setOpenCategory={[Function]}
  >
    <div
      className="card b-l-gray library-card-category-closed"
    >
      <div
        className="ml-cat"
      >
        <div
          className="first-level"
          onMouseEnter={[Function]}
        >
          <div
            className="closed-ML-cat"
          >
            <span
              className="icon-url ml-icon"
            />
          </div>
        </div>
      </div>
    </div>
  </ModuleCategory>
</DragDropContextProvider>
`;

exports[`ModuleCategory  Library closed, category open Renders with list of Module components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategory
    collapsed={false}
    isReadOnly={false}
    libraryOpen={false}
    modules={
      Array [
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="add"
          id={88}
          name="First Module"
      />,
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="url"
          id={101}
          name="Second Module"
      />,
      ]
    }
    name="Add Data"
    setOpenCategory={[Function]}
  >
    <div
      className="card b-l-gray library-card-category-open"
    >
      <div
        className="ml-cat"
      >
        <div
          className="first-level"
          onMouseEnter={[Function]}
        >
          <div
            className="closed-ML-cat"
          >
            <span
              className="icon-undefined ml-icon"
            />
          </div>
        </div>
        <div
          className="ml-list-mini"
          onMouseLeave={[Function]}
        >
          <DragSource(Module)
            addModule={[Function]}
            dropModule={[Function]}
            icon="add"
            id={88}
            name="First Module"
          >
            <Module
              addModule={[Function]}
              connectDragSource={[Function]}
              dropModule={[Function]}
              icon="add"
              id={88}
              isDragging={false}
              name="First Module"
            >
              <div
                className="card ml-module-card"
              >
                <div
                  className=""
                  onClick={[Function]}
                >
                  <div
                    className="second-level d-flex"
                  >
                    <div
                      className="d-flex flex-row align-items-center"
                    >
                      <div
                        className="ml-icon-container"
                      >
                        <div
                          className="icon-add ml-icon"
                        />
                      </div>
                      <div>
                        <div
                          className="content-5 ml-module-name"
                        >
                          First Module
                        </div>
                      </div>
                    </div>
                    <div
                      className="ml-handle"
                    >
                      <div
                        className="icon-grip"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </Module>
          </DragSource(Module)>
          <DragSource(Module)
            addModule={[Function]}
            dropModule={[Function]}
            icon="url"
            id={101}
            name="Second Module"
          >
            <Module
              addModule={[Function]}
              connectDragSource={[Function]}
              dropModule={[Function]}
              icon="url"
              id={101}
              isDragging={false}
              name="Second Module"
            >
              <div
                className="card ml-module-card"
              >
                <div
                  className=""
                  onClick={[Function]}
                >
                  <div
                    className="second-level d-flex"
                  >
                    <div
                      className="d-flex flex-row align-items-center"
                    >
                      <div
                        className="ml-icon-container"
                      >
                        <div
                          className="icon-url ml-icon"
                        />
                      </div>
                      <div>
                        <div
                          className="content-5 ml-module-name"
                        >
                          Second Module
                        </div>
                      </div>
                    </div>
                    <div
                      className="ml-handle"
                    >
                      <div
                        className="icon-grip"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </Module>
          </DragSource(Module)>
        </div>
      </div>
    </div>
  </ModuleCategory>
</DragDropContextProvider>
`;

exports[`ModuleCategory  Library open, category collapsed Renders with list of Module components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategory
    collapsed={true}
    isReadOnly={false}
    libraryOpen={true}
    modules={
      Array [
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="add"
          id={88}
          name="First Module"
      />,
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="url"
          id={101}
          name="Second Module"
      />,
      ]
    }
    name="Add Data"
    setOpenCategory={[Function]}
  >
    <div
      className="card b-l-gray library-card-category-closed"
    >
      <div
        className="ml-cat"
      >
        <div
          className="first-level"
          onClick={[Function]}
        >
          <div
            className="cat-container"
          >
            <span
              className="open-ML-cat"
            >
              Add Data
            </span>
            <div
              className="ml-sort icon-sort-down-vl-gray"
            />
          </div>
        </div>
        <Collapse
          delay={
            Object {
              "hide": 350,
              "show": 350,
            }
          }
          isOpen={false}
          onClosed={[Function]}
          onOpened={[Function]}
          tag="div"
        >
          <div
            className="collapse"
            style={Object {}}
          >
            <div
              className="ml-list"
            >
              <DragSource(Module)
                addModule={[Function]}
                dropModule={[Function]}
                icon="add"
                id={88}
                name="First Module"
              >
                <Module
                  addModule={[Function]}
                  connectDragSource={[Function]}
                  dropModule={[Function]}
                  icon="add"
                  id={88}
                  isDragging={false}
                  name="First Module"
                >
                  <div
                    className="card ml-module-card"
                  >
                    <div
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="second-level d-flex"
                      >
                        <div
                          className="d-flex flex-row align-items-center"
                        >
                          <div
                            className="ml-icon-container"
                          >
                            <div
                              className="icon-add ml-icon"
                            />
                          </div>
                          <div>
                            <div
                              className="content-5 ml-module-name"
                            >
                              First Module
                            </div>
                          </div>
                        </div>
                        <div
                          className="ml-handle"
                        >
                          <div
                            className="icon-grip"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </Module>
              </DragSource(Module)>
              <DragSource(Module)
                addModule={[Function]}
                dropModule={[Function]}
                icon="url"
                id={101}
                name="Second Module"
              >
                <Module
                  addModule={[Function]}
                  connectDragSource={[Function]}
                  dropModule={[Function]}
                  icon="url"
                  id={101}
                  isDragging={false}
                  name="Second Module"
                >
                  <div
                    className="card ml-module-card"
                  >
                    <div
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="second-level d-flex"
                      >
                        <div
                          className="d-flex flex-row align-items-center"
                        >
                          <div
                            className="ml-icon-container"
                          >
                            <div
                              className="icon-url ml-icon"
                            />
                          </div>
                          <div>
                            <div
                              className="content-5 ml-module-name"
                            >
                              Second Module
                            </div>
                          </div>
                        </div>
                        <div
                          className="ml-handle"
                        >
                          <div
                            className="icon-grip"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </Module>
              </DragSource(Module)>
            </div>
          </div>
        </Collapse>
      </div>
    </div>
  </ModuleCategory>
</DragDropContextProvider>
`;
